syntax = "proto3";
option csharp_namespace = "GRPC_PurchaseEnterpriseClient";

package purchaseEnterpriseDTO;

service PurchaseEnterpriseDTO {
  rpc CreatePurchaseEnterprise(CreatePurchaseEnterpriseDTOLookUpModel) returns (CreatePurchaseEnterpriseDTOModel);
  rpc UpdatePurchaseEnterprise(UpdatePurchaseEnterpriseDTOLookUpModel) returns (UpdatePurchaseEnterpriseDTOModel);
}

// Request
message CreatePurchaseEnterpriseDTOLookUpModel {
  int32 StoreId = 1;
}

// Response
message CreatePurchaseEnterpriseDTOModel {
	int32 PurchaseId = 1;
}

// Request
message UpdatePurchaseEnterpriseDTOLookUpModel {
  int32 PurchaseId = 1;
  repeated ProductEnterpriseDTOLookUpModel ProductEnterpriseDTOLookUpModel = 5;
}

// Response
message UpdatePurchaseEnterpriseDTOModel {
	int32 PurchaseId = 1;
	repeated ProductEnterpriseDTOModel ProductEnterpriseDTOModel = 3;
}


/*message ProductSaleEnterpriseDTOModel {
	int32 Id = 1;
	ProductEnterpriseDTOModel ProductEnterpriseDTOModel = 2;
	double salePrice = 3;
}*/

message ProductEnterpriseDTOLookUpModel {
	int32 Id = 1;
}

// Response
message ProductEnterpriseDTOModel {
	int32 Id = 1;
	int32 Barcode = 2;
	double PurchasePrice = 3;
	string Name = 4;
	double SalePrice = 5;
}